--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+input{
+    /* className="border-b border-gray-500 focus:border-indigo-500 focus:outline-none" */
+    border-bottom: solid black 1px; 
+    width: 100%;
+  
+  }
+  
+
+label{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 1em; 
+    width: 100%;
+}
+
